--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weso",
   "version": "1.0.3",
   "description": "Universal websocket handler for both client and servers in JS",
+  "repository": "https://github.com/Hild-Franck/weso.git",
   "main": "index.js",
   "scripts": {
     "babel build": "babel src/index.js -w --out-file index.js",
@@ -15,5 +16,8 @@
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-preset-es2015": "^6.9.0"
+  },
+  "dependencies": {
+    "through2": "^2.0.1"
   }
 }
